[metadata]
name = png-debug
version = 0.0.1
url = https://github.com/ittner/png-debug/
license = GPLv3
author = Alexandre Erwin Ittner
author_email = alexandre@ittner.com.br
description = Random utilities to play with PNG files
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: POSIX :: Linux
    Operating System :: POSIX
    Operating System :: Unix
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:
zip_safe = true
scripts = png-debug
